--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #f5f6fa;
+}
+
+.app {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #f5f6fa;
+  padding: 20px;
+}
+
+
+.app__stats {
+  display: flex;
+  justify-content: space-between;
+}
+
+.app__main {
+  flex: 0.9;
+}
+
+.card__container {
+  display: grid;
+  height: 100%;
+  grid-template-areas: "countries-info"
+                       "countries-chart";
+}
+.card__countriesInfo{
+  grid-area: countries-info;
+}
+.card__countriesChart{
+  grid-area: countries-chart;
+  align-self: center;
+  justify-self: center;
+}
+
+.card__countriesChart h3{
+  margin-bottom: 10px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 900px) {
+  .app {
+    flex-direction: column;
   }
 }
